--- a/Styles/style.css
+++ b/Styles/style.css
@@ -15,6 +15,16 @@
     font-weight: 700;
     font-size: 20px;
 }
+.btn-secondary{
+    color: #FD6E0A;
+    height: 64px;
+    padding: 18px 35px;
+    border-radius: 5px;
+    border: 1px solid #FD6E0A;
+    background-color: #FFF;
+    font-weight: 700;
+    font-size: 20px;
+}
 .header{
     background-color: #fff8f3;
     background-image: url(../images/header_bg.png), url(../images/developer.png);
@@ -25,7 +35,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 50px 200px;
+    padding: 30px 100px;
 }
 .nav-tittle{
     font-weight: 800px;
@@ -43,7 +53,11 @@ nav li{
 .banner{
     display: flex;
     align-items: center;
-    margin: 0 200px;
+    margin: 90px 200px;
+    gap: 120px;
+}
+.banner img{
+    width: 100%;
 }
 .banner-tittle{
     font-weight: 700;
@@ -67,7 +81,7 @@ nav li{
 }
 
 section{
-    margin: 150px;
+    margin: 100px;
     margin-top: 130px;
 }
 /* About Section start */
@@ -75,16 +89,127 @@ section{
 .about{
 background: #FFF8F3;
 border-radius: 10px;
-padding: 130px 150px;
+padding: 80px 150px;
 }
 .section-title{
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
 }
 .section-description{
     color: #757575 ;
     font-size: 18px;
+    margin-bottom: 50px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+}
+.info-title{
+    font-size: 20px;
+    color: #757575;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.info-description{
+    font-weight: 700;
+    font-size: 13px;
+}
+/* Skill Section start */
+
+.skills-container{
+    display: flex;
+    justify-content: space-around;
+    gap: 24px;
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color: #757575;
+}
+/* resume-section-start */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
     margin-bottom: 30px;
+    margin-top: 30px;
+}
+.resume .title{
+    color: #474747;
+    font-weight: 700;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume .description{
+    color: #757575;
+}
+.resume-button {
+    margin-top: 50px;
+    text-align: center;
+}
+/* contact styles */
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 100px 100px;
+}
+.contact .section-title{
+    text-align: left;
+}
+.contact-description{
+    width: 100%;
+    color: #757575;
+}
+.contact input[type="text"],input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+
+.contact a{
+    text-decoration: none;
+}
+.contact img{
+    margin-top: 20px;
+    margin-right: 10px;
+}
+.contact form{
+    width: 300px;
+}
+
+
+.footer{
+    text-align: center;
+}
+.footer  h6{
+    font-weight: 500;
+    color: #757575;
+    margin-bottom: 15px;
+}
+.footer h5{
+    font-size: 25px;
+    margin-bottom: 20px;
+    color: #FD6E0A;
 }
